--- a/index.html
+++ b/index.html
@@ -1,35 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agency site</title>
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="website">
-        <header class="header">
-            <nav class="nav">
-                <h1 class="logo">
-                    <a class="logo__link" href='#'>
-                        <img class="logo__img" src="assets/software_logo-b.png">
-                    </a>
-                </h1>
-                <ul class="list">
-                    <li class="list__item"><a class="list__link" href="#">Home</a></li>
-                    <li class="list__item"><a class="list__link" href="#">About Us</a></li>
-                    <li class="list__item"><a class="list__link" href="#">Service</a></li>
-                    <li class="list__item"><a class="list__link" href="#">Teams</a></li>
-                    <button class="list__btn">Let's talk!</button>
-                </ul>
-            </nav>
-        </header>
+      <header class="header">
+        <nav class="nav">
+          <h1 class="logo">
+            <a class="logo__link" href="#">
+              <img class="logo__img" src="assets/software_logo-b.png" />
+            </a>
+          </h1>
+          <ul class="list">
+            <li class="list__item"><a class="list__link" href="#">Home</a></li>
+            <li class="list__item">
+              <a class="list__link" href="#">About Us</a>
+            </li>
+            <li class="list__item">
+              <a class="list__link" href="#">Service</a>
+            </li>
+            <li class="list__item"><a class="list__link" href="#">Teams</a></li>
+            <button class="list__btn">Let's talk!</button>
+          </ul>
+          <button class="hamburger">
+            <span class="hamburger__bar"></span>
+            <span class="hamburger__bar"></span>
+            <span class="hamburger__bar"></span>
+          </button>
+        </nav>
+      </header>
+      <div class="services">
+        <h1 class="title">Our <span class="title__word">Services</span></h1>
+        <ul class="">
+          <li class="">
+            <a href="#" class="">Software <span class="">Development</span></a>
+          </li>
+          <li class="">
+            <a href="#" class="">Website <span class="">Development</span></a>
+          </li>
+          <li class="">
+            <a href="#" class="">Mobile <span class="">Development</span></a>
+          </li>
+          <li class=""><a href="#" class="">Database</a></li>
+        </ul>
+      </div>
+      <footer class="footer">
+        <h1 class="logo logo--footer">
+          <a class="logo__link" href="#">
+            <img class="logo__img" src="assets/software_logo-w.png" />
+          </a>
+        </h1>
+        <p class="footer__title">
+          I'ts <span class="footer__title__part">Easy</span> to started!
+        </p>
+        <ul class="footer__list">
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Home</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">About Us</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Service</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Teams</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Service</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Teams</a>
+          </li>
+        </ul>
+      </footer>
     </div>
-
-
-</body>
-
+  </body>
 </html>
