--- a/index.html
+++ b/index.html
@@ -1,88 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agency site</title>
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="website">
-        <header class="header">
-            <nav class="nav">
-                <h1 class="logo">
-                    <a class="logo__link" href="#">
-                        <img class="logo__img" src="assets/software_logo-b.png" />
-                    </a>
-                </h1>
-                <ul class="list">
-                    <li class="list__item"><a class="list__link" href="#">Home</a></li>
-                    <li class="list__item">
-                        <a class="list__link" href="#">About Us</a>
-                    </li>
-                    <li class="list__item">
-                        <a class="list__link" href="#">Service</a>
-                    </li>
-                    <li class="list__item"><a class="list__link" href="#">Teams</a></li>
-                    <button class="list__btn">Let's talk!</button>
-                </ul>
-                <button class="hamburger">
-                    <span class="hamburger__bar"></span>
-                    <span class="hamburger__bar"></span>
-                    <span class="hamburger__bar"></span>
-                </button>
-            </nav>
-        </header>
-        <div class="services">
-            <h1 class="title">Our <span class="title__word">Services</span></h1>
-            <ul class="">
-                <li class="">
-                    <a href="#" class="">Software <span class="">Development</span></a>
-                </li>
-                <li class="">
-                    <a href="#" class="">Website <span class="">Development</span></a>
-                </li>
-                <li class="">
-                    <a href="#" class="">Mobile <span class="">Development</span></a>
-                </li>
-                <li class=""><a href="#" class="">Database</a></li>
-            </ul>
-        </div>
-        <footer class="footer">
-            <h1 class="logo logo--footer">
-                <a class="logo__link" href="#">
-                    <img class="logo__img" src="assets/software_logo-w.png" />
-                </a>
-            </h1>
-            <p class="footer__title">
-                I'ts <span class="footer__title__part">Easy</span> to started!
-            </p>
-            <ul class="footer__list">
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">Home</a>
-                </li>
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">About Us</a>
-                </li>
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">Service</a>
-                </li>
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">Teams</a>
-                </li>
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">Service</a>
-                </li>
-                <li class="footer__list__item">
-                    <a class="footer__list__link" href="#">Teams</a>
-                </li>
-            </ul>
-        </footer>
+      <header class="header">
+        <nav class="nav">
+          <h1 class="logo">
+            <a class="logo__link" href="#">
+              <img class="logo__img" src="assets/software_logo-b.png" />
+            </a>
+          </h1>
+          <ul class="list">
+            <li class="list__item"><a class="list__link" href="#">Home</a></li>
+            <li class="list__item">
+              <a class="list__link" href="#">About Us</a>
+            </li>
+            <li class="list__item">
+              <a class="list__link" href="#">Service</a>
+            </li>
+            <li class="list__item"><a class="list__link" href="#">Teams</a></li>
+            <button class="list__btn">Let's talk!</button>
+          </ul>
+          <button class="hamburger">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                class="hamburger__bar--top"
+                d="M4.28571 10.0001C4.28571 9.21112 4.92531 8.57153 5.71428 8.57153H34.2857C35.0747 8.57153 35.7143 9.21112 35.7143 10.0001C35.7143 10.7891 35.0747 11.4287 34.2857 11.4287H5.71428C4.92531 11.4287 4.28571 10.7891 4.28571 10.0001Z"
+                fill="black"
+              />
+              <path
+                class="hamburger__bar--center"
+                d="M4.28571 20.0001C4.28571 19.2111 4.92531 18.5715 5.71428 18.5715H34.2857C35.0747 18.5715 35.7143 19.2111 35.7143 20.0001C35.7143 20.7891 35.0747 21.4287 34.2857 21.4287H5.71428C4.92531 21.4287 4.28571 20.7891 4.28571 20.0001Z"
+                fill="black"
+              />
+              <path
+                class="hamburger__bar--bottom"
+                d="M5.71428 28.5715C4.92531 28.5715 4.28571 29.2111 4.28571 30.0001C4.28571 30.7891 4.92531 31.4287 5.71428 31.4287H34.2857C35.0747 31.4287 35.7143 30.7891 35.7143 30.0001C35.7143 29.2111 35.0747 28.5715 34.2857 28.5715H5.71428Z"
+                fill="black"
+              />
+            </svg>
+          </button>
+        </nav>
+      </header>
+      <div class="services">
+        <h1 class="title">Our <span class="title__word">Services</span></h1>
+        <ul class="">
+          <li class="">
+            <a href="#" class="">Software <span class="">Development</span></a>
+          </li>
+          <li class="">
+            <a href="#" class="">Website <span class="">Development</span></a>
+          </li>
+          <li class="">
+            <a href="#" class="">Mobile <span class="">Development</span></a>
+          </li>
+          <li class=""><a href="#" class="">Database</a></li>
+        </ul>
+      </div>
+      <footer class="footer">
+        <h1 class="logo logo--footer">
+          <a class="logo__link" href="#">
+            <img class="logo__img" src="assets/software_logo-w.png" />
+          </a>
+        </h1>
+        <p class="footer__title">
+          I'ts <span class="footer__title__part">Easy</span> to started!
+        </p>
+        <ul class="footer__list">
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Home</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">About Us</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Service</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Teams</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Service</a>
+          </li>
+          <li class="footer__list__item">
+            <a class="footer__list__link" href="#">Teams</a>
+          </li>
+        </ul>
+      </footer>
     </div>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
