--- a/index.html
+++ b/index.html
@@ -57,17 +57,26 @@
       </header>
       <div class="services">
         <h1 class="title">Our <span class="title__word">Services</span></h1>
-        <ul class="">
-          <li class="">
-            <a href="#" class="">Software <span class="">Development</span></a>
+        <ul class="services__list">
+          <li class="services__list__item">
+            <a href="#" class="services__list__link"
+              >Software <span class="services__list__word">Development</span></a
+            >
           </li>
-          <li class="">
-            <a href="#" class="">Website <span class="">Development</span></a>
+          <li class="services__list__item">
+            <a href="#" class="services__list__link"
+              >Website <span class="services__list__word">Development</span></a
+            >
           </li>
-          <li class="">
-            <a href="#" class="">Mobile <span class="">Development</span></a>
+          <li class="services__list__item">
+            <a href="#" class="services__list__link"
+              >Mobile app
+              <span class="services__list__word">Development</span></a
+            >
           </li>
-          <li class=""><a href="#" class="">Database</a></li>
+          <li class="services__list__item">
+            <a href="#" class="services__list__link">Database</a>
+          </li>
         </ul>
       </div>
       <footer class="footer">
