Added square block with basic styling

--- a/index.html
+++ b/index.html
@@ -54,6 +54,44 @@
             </svg>
           </button>
         </nav>
+        <div class="square">
+          <div class="square__description">
+            <div class="square__wrapper">
+              <p class="square__text">The best</p>
+              <p class="square__text">Software</p>
+              <p class="square__text">Agency</p>
+            </div>
+            <div class="square__icon">
+              <svg
+                width="70"
+                height="69"
+                viewBox="0 0 70 69"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M65.944 11.9328L10.203 3.809M65.944 11.9328L57.8201 67.6738M65.944 11.9328L1.80856 59.7517"
+                  stroke="#2847D5"
+                  stroke-width="6"
+                />
+              </svg>
+            </div>
+            <div class="square__info">
+              <p class="square__info-p"></p>
+              <button class="square__info-btn">Contact</button>
+            </div>
+            <div class="square__footer">
+              <div class="square__">
+                <span>Based On</span>
+                <span>Est</span>
+              </div>
+              <div class="square__">
+                <span>Singapore</span>
+                <span>1922</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </header>
       <div class="services">
         <h1 class="title">Our <span class="title__word">Services</span></h1>
