--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="square">
                 <div class="square__description square__element">
                     <div class="square__icon square__element">
-                        <svg width="70" height="69" viewBox="0 0 70 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg viewBox="0 0 70 69" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M65.944 11.9328L10.203 3.809M65.944 11.9328L57.8201 67.6738M65.944 11.9328L1.80856 59.7517"
                   stroke="#2847D5"
